--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ main {
     background-color:rgba(24, 36, 63, 0.986);
     flex: 1;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -83,7 +82,23 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 3 0 auto;
     
+}
+
+#filler, #score-container {
+    flex: 1 0 0;
+}
+
+#score-container {
+    align-self: flex-start;
+}
+
+.user-score, .computer-score {
+    color: rgba(192, 154, 209, 0.548);
+    margin-left: 0;
+    margin-right: 76px;
+    margin-top: 64px;
 }
 
 .ready {
