--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 3 0 auto;
+    flex: 3 1 auto;
     
 }
 
@@ -91,6 +91,9 @@ main {
 }
 
 #score-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     align-self: flex-start;
 }
 
@@ -101,6 +104,11 @@ main {
     margin-top: 64px;
     font-size: 24px;
     font-family: 'ibm_plex_monosemibold', Arial;
+    margin-left: -200px;
+}
+
+.computer-score {
+    margin-bottom: 64px;
 }
 
 .ready {
@@ -112,7 +120,7 @@ main {
 button {
     text-decoration: none;
     color:rgba(24, 36, 63, 0.986);
-   
+    box-shadow: 5px 5px 2px black;
     background-color: rgba(192, 154, 209, 0.548);
     font-family: 'press_start_2pregular', Courier;
     padding: 16px;
@@ -139,6 +147,8 @@ footer {
     max-width: 200px;
     height: auto;
     margin-bottom: 24px;
+    border-radius: 16px;
+    box-shadow: 10px 10px 10px;
 }
 
 #dialogue {
